--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,8 @@
   <GridLayout *tabItem="{ title: 'Search' }">
     <page-router-outlet name="searchTab"></page-router-outlet>
   </GridLayout>
+
+  <GridLayout *tabItem="{ title: 'Ride' }">
+    <page-router-outlet name="rideTab"></page-router-outlet>
+  </GridLayout>
 </TabView>
